--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/assets/logo/NPA_Logo_Enlarge.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-react-app</title>
+    <title>Navedhana - Fresh Produce, Software & Seasonal Joy</title>
+    <meta name="description" content="Navedhana - Bridging the gap between traditional values and modern technology. Fresh organic produce, innovative software solutions, and seasonal festival supplies." />
   </head>
   <body>
     <div id="root"></div>
